deploys/spoolman/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: spoolman-ingress
  namespace: spoolman
spec:
  entryPoints:
    - websecure  # Only use the HTTPS entrypoint here
  routes:
    - kind: Rule
      match: Host(`spoolman.rmblau.com`)
      priority: 20 # Bump priority higher than ArgoCD just to isolate
      services:
        - name: spoolman
          port: 7912
  tls:
    certResolver: letsencrypt-dns01-issuer
